--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,6 +47,21 @@ endif()
 
 PROJECT(FS2_Open LANGUAGES ${FSO_LANGUAGES})
 
+if (ANDROID)
+    message(STATUS "Building for Android (NDK)")
+    set(CMAKE_POSITION_INDEPENDENT_CODE ON)
+    add_definitions(-DPLATFORM_ANDROID)
+	set(FSO_BUILD_INCLUDED_LIBS ON FORCE)
+	set(USING_PREBUILT_LIBS ON FORCE)
+	
+	#temporary, i could not get it to work in any other way
+	set(SDL2_ROOT "${FSO_PREBUILT_OVERRIDE}/sdl2")
+    set(SDL2_DIR "${SDL2_ROOT}/lib/cmake/SDL2")
+	set(SDL2_INCLUDE_DIR "${SDL2_ROOT}/include/SDL2")
+    find_package(SDL2 REQUIRED PATHS ${SDL2_ROOT} NO_DEFAULT_PATH)
+    target_include_directories(SDL2::SDL2 INTERFACE ${SDL2_INCLUDE_DIR})
+endif()
+
 # Check if the external modules exists
 IF(NOT IS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/cmake/external/rpavlik-cmake-modules/launcher-templates")
 	message(FATAL_ERROR "External submodules could not be found. Please make sure you have updated your submodules.")
@@ -94,8 +109,8 @@ OPTION(FSO_DEVELOPMENT_MODE "Generate binaries in development mode, only use if 
 
 OPTION(FSO_BUILD_QTFRED "Build qtFRED2 binary" OFF)
 
-IF(WIN32 OR APPLE)
-	# On windows and mac the default should be to always build the included libraries
+IF(WIN32 OR APPLE OR ANDROID)
+	# On windows, mac and android the default should be to always build the included libraries
 	SET(FSO_BUILD_INCLUDED_LIBS_DEFAULT ON)
 ELSE()
 	SET(FSO_BUILD_INCLUDED_LIBS_DEFAULT OFF)
@@ -134,8 +149,8 @@ ELSE()
 	SET(OPENXR_BUILD_DEFAULT OFF)
 ENDIF()
 OPTION(FSO_BUILD_WITH_OPENXR "Build with OpenXR support" ${OPENXR_BUILD_DEFAULT})
-IF(FSO_BUILD_WITH_OPENXR AND APPLE)
-	MESSAGE(WARNING "FSO_BUILD_WITH_OPENXR is ON. Not supported on macOS - setting to OFF.")
+IF(FSO_BUILD_WITH_OPENXR AND (APPLE OR ANDROID))
+	MESSAGE(WARNING "FSO_BUILD_WITH_OPENXR is ON. Not supported on macOS/Android - setting to OFF.")
 	SET(FSO_BUILD_WITH_OPENXR OFF CACHE BOOL "" FORCE)
 ENDIF()
 
