add FSO_BUILD_WITH_OPENGL_ES flag

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,6 +53,7 @@ if (ANDROID)
     add_definitions(-DPLATFORM_ANDROID)
 	set(FSO_BUILD_INCLUDED_LIBS ON FORCE)
 	set(USING_PREBUILT_LIBS ON FORCE)
+	set(FSO_BUILD_WITH_OPENGL_ES ON)
 	
 	#temporary, i could not get it to work in any other way
 	set(SDL2_ROOT "${FSO_PREBUILT_OVERRIDE}/sdl2")
@@ -140,8 +141,18 @@ OPTION(FSO_BUILD_WITH_DISCORD "Build with Discord support" ON)
 
 OPTION(FSO_BUILD_WITH_OPENGL "Enable compilation of the OpenGL renderer" ON)
 OPTION(FSO_BUILD_WITH_OPENGL_DEBUG "Enables debug option for OpenGL" OFF)
+OPTION(FSO_BUILD_WITH_OPENGL_ES "When building OpenGL, use OpenGL ES path instead of core (for testing only!)" OFF)
 
 OPTION(FSO_BUILD_WITH_VULKAN "Enable compilation of the Vulkan renderer" OFF)
+
+if(NOT FSO_BUILD_WITH_OPENGL AND FSO_BUILD_WITH_OPENGL_ES)
+	# Disable GLES if not building with OpenGL
+	set(FSO_BUILD_WITH_OPENGL_ES OFF FORCE)
+endif()
+
+if(FSO_BUILD_WITH_OPENGL_ES)
+	add_definitions(-DUSE_OPENGL_ES)
+endif()
 
 IF(NOT APPLE)
 	SET(OPENXR_BUILD_DEFAULT ON)
@@ -171,6 +182,7 @@ mark_as_advanced(FORCE FSO_BUILD_WITH_FFMPEG)
 mark_as_advanced(FORCE FSO_BUILD_WITH_DISCORD)
 mark_as_advanced(FORCE FSO_BUILD_WITH_OPENGL)
 mark_as_advanced(FORCE FSO_BUILD_WITH_OPENGL_DEBUG)
+mark_as_advanced(FORCE FSO_BUILD_WITH_OPENGL_ES)
 mark_as_advanced(FORCE FSO_BUILD_WITH_VULKAN)
 mark_as_advanced(FORCE FSO_BUILD_WITH_OPENXR)
 mark_as_advanced(FORCE FSO_BUILD_WITH_OPENXR_DEBUG)
@@ -257,5 +269,6 @@ message(STATUS "Release logging: ${FSO_RELEASE_LOGGING}")
 message(STATUS "With FFmpeg: ${FSO_BUILD_WITH_FFMPEG}")
 message(STATUS "With Discord: ${FSO_BUILD_WITH_DISCORD}")
 message(STATUS "With OpenGL: ${FSO_BUILD_WITH_OPENGL}")
+message(STATUS "With OpenGL ES: ${FSO_BUILD_WITH_OPENGL_ES}")
 message(STATUS "With Vulkan: ${FSO_BUILD_WITH_VULKAN}")
 message(STATUS "With OpenXR: ${FSO_BUILD_WITH_OPENXR}")
