add GLAD_ES loader

--- a/lib/opengl/gl/CMakeLists.txt
+++ b/lib/opengl/gl/CMakeLists.txt
@@ -1,15 +1,27 @@
+if(NOT FSO_BUILD_WITH_OPENGL_ES)
+	add_library(glad STATIC
+		"glad/include/glad/glad.h"
+		"glad/include/KHR/khrplatform.h"
+		"glad/src/glad.c")
+	target_include_directories(glad SYSTEM PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/glad/include")
+	set_target_properties(glad PROPERTIES FOLDER "3rdparty")
+	suppress_warnings(glad)
 
-add_library(glad STATIC
-	"glad/include/glad/glad.h"
-	"glad/include/KHR/khrplatform.h"
-	"glad/src/glad.c")
-target_include_directories(glad SYSTEM PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/glad/include")
-set_target_properties(glad PROPERTIES FOLDER "3rdparty")
-suppress_warnings(glad)
 
-
-add_library(OpenGL INTERFACE)
-target_link_libraries(OpenGL INTERFACE glad)
+	add_library(OpenGL INTERFACE)
+	target_link_libraries(OpenGL INTERFACE glad)
+else()
+    add_library(glad_gles STATIC
+        "glad_es/include/glad/glad.h"
+        "glad_es/include/KHR/khrplatform.h"
+        "glad_es/src/glad.c")
+    target_include_directories(glad_gles SYSTEM PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/glad_es/include")
+    set_target_properties(glad_gles PROPERTIES FOLDER "3rdparty")
+    suppress_warnings(glad_gles)
+	
+	add_library(OpenGL INTERFACE)
+    target_link_libraries(OpenGL INTERFACE glad_gles)
+endif()	
 
 if (WIN32)	
 	add_library(glad_wgl STATIC
