compile imgui with opengl es 3 on linux

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -146,9 +146,13 @@ endif()
 
 if(FSO_BUILD_WITH_OPENGL_ES)
 	add_definitions(-DUSE_OPENGL_ES)
+	IF(FSO_BUILD_WITH_OPENXR)
+		MESSAGE(WARNING "FSO_BUILD_WITH_OPENXR is ON. But not supported on OpenGL ES for now - setting to OFF.")
+		SET(FSO_BUILD_WITH_OPENXR OFF CACHE BOOL "" FORCE)
+	endif()
 endif()
 
-IF(NOT APPLE)
+IF(NOT APPLE AND NOT ANDROID AND NOT FSO_BUILD_WITH_OPENGL_ES)
 	SET(OPENXR_BUILD_DEFAULT ON)
 ELSE()
 	SET(OPENXR_BUILD_DEFAULT OFF)
