--- a/lib/imgui/CMakeLists.txt
+++ b/lib/imgui/CMakeLists.txt
@@ -39,8 +39,10 @@ TARGET_LINK_LIBRARIES(imgui PUBLIC sdl2)
 target_link_libraries(imgui PUBLIC compiler)
 
 if(FSO_BUILD_WITH_OPENGL_ES)
-    # IMGUI needs to link against OpenGL ES 3
-    if(ANDROID)
+    # IMGUI needs to link against OpenGL ES 3, the NDK already has it
+    # For Linux this adds a dependency: libgles2-mesa-dev
+    if(ANDROID OR MAKE_SYSTEM_NAME MATCHES "Linux")
+    	add_definitions(-DIMGUI_IMPL_OPENGL_ES3)
     	find_library(GLESv3_LIB GLESv3)
     	target_link_libraries(imgui PRIVATE ${GLESv3_LIB})
     endif()
