Fix imgui crashing on windows with gles, use angle lib

--- a/lib/imgui/CMakeLists.txt
+++ b/lib/imgui/CMakeLists.txt
@@ -45,6 +45,21 @@ if(FSO_BUILD_WITH_OPENGL_ES)
     	add_definitions(-DIMGUI_IMPL_OPENGL_ES3)
     	find_library(GLESv3_LIB GLESv3)
     	target_link_libraries(imgui PRIVATE ${GLESv3_LIB})
+	elseif(WIN32)
+		# Windows, optional Angle, without Angle it will compile and run, but it will crash if you use imgui
+		set(ANGLE_ROOT "" CACHE PATH "Folder with ANGLE include/ and lib/")
+		if(ANGLE_ROOT AND EXISTS "${ANGLE_ROOT}")
+			find_path(angle_include NAMES GLES3/gl3.h HINTS "${ANGLE_ROOT}/include" NO_DEFAULT_PATH)
+			find_library(angle_gles2 NAMES libGLESv2.dll.lib HINTS "${ANGLE_ROOT}/lib" NO_DEFAULT_PATH)
+			if(angle_include AND angle_gles2)
+				message(STATUS "ANGLE found on: ${ANGLE_ROOT}")
+				target_include_directories(imgui PRIVATE "${angle_include}")
+				target_link_libraries(imgui PRIVATE "${angle_gles2}")
+				add_definitions(-DIMGUI_IMPL_OPENGL_ES3)
+			else()
+				message(WARNING "ANGLE lib is needed to use imgui with the OpenGL ES backend. Without it FSO will compile and run, but imgui will crash. Please specify a path to a prebuilt version of the ANGLE using ANGLE_ROOT")
+			endif()
+		endif()
     endif()
 endif()
 
